# Metaheuristic_GQAP

./: .gitignore  GQAP_CLI.txt  Readme.txt
algorithm/: CMakeLists.txt
algorithm/application/: CMakeLists.txt  GQAP_GRASP_Solver_TimeToTarget.cpp  test_CLI.cpp  test_ElementFlip_NH_HillClimbing.cpp  test_ElementFlip_Neighborhood.cpp  test_Evaluation.cpp  test_PathRelinking.cpp  test_Pool.cpp  test_ReadProblem.cpp
algorithm/src/: CMakeLists.txt  GQAP.cpp  GQAP.h  GQAP_CLI.h  GQAP_ElementFlip_IncrEval.cpp  GQAP_ElementFlip_IncrEval.h  GQAP_ElementFlip_Neighbor.cpp  GQAP_ElementFlip_Neighbor.h  GQAP_Eval.h  GQAP_GRASP_Algo.cpp  GQAP_GRASP_Algo.h  GQAP_IncrEval_Base_ElementFlip.h  GQAP_Solution.h  GRASP_Alpha.h  GRASP_FixedAlpha.cpp  GRASP_FixedAlpha.h  GRASP_ReactiveAlpha.cpp  GRASP_ReactiveAlpha.h  GRASP_UniformRandomAlpha.cpp  GRASP_UniformRandomAlpha.h  PR_IncrEval.cpp  PR_IncrEval.h  PR_MoveSelector.h  PR_Neighbor.cpp  PR_Neighbor.h  PR_Neighborhood.cpp  PR_Neighborhood.h  PR_Step.h  PathRelinking.cpp  PathRelinking.h  SolutionPool.cpp  SolutionPool.h
test_instances/own_instances/mini_test_instances/: 4-2.txt
tests/Time2Target-Cordeau/: GRASP_Solver_T2T  GRASP_Solver_T2T.status  RunTest-50-10-65-PR5.sh  RunTest-50-10-65-PR6.sh  Test-50-10-65-PR1.csv  Test-50-10-65-PR2.csv  Test-50-10-65-PR4.csv
tests/Time2Target-Cordeau/20-15-35/: GRASP_Solver_T2T.status  Initit_vs_PRpresent_vs_SolTime.R  Inits_vs_LS_vs_PR_Eval.R  ResultsLS+PR-Tests-quick.csv  ResultsLS+PR-Tests.csv  RunTest-20-15-35-LS-vs-Start.sh  RunTest-20-15-35-LS.sh  RunTest-20-15-35-PR1.sh  RunTest-20-15-35-PR2.sh  RunTest-20-15-35-PR3-Q.sh  RunTest-20-15-35-PR3.sh  RunTest-20-15-35-PR3b.sh  RunTest-20-15-35-PR4-Q.sh  RunTest-20-15-35-PR4.sh  RunTest-20-15-35-PR4b-Q.sh  RunTest-20-15-35-PR4b.sh  RunTest-20-15-35-PR5-Q.sh  RunTest-20-15-35-PR5.sh  RunTest-20-15-35-PR5b-Q.sh  RunTest-20-15-35-PR5b.sh  RunTest-20-15-35-PR6-Q.sh  RunTest-20-15-35-PR6.sh  RunTest-20-15-35-PR6b-Q.sh  RunTest-20-15-35-PR6b.sh  RunTest-20-15-35-woPR-quick.sh  RunTest-20-15-35-woPR.sh  RunTest-20-15-35_PoolSize.sh  Test-20-15-35-LS.csv  Test-20-15-35-PR1.csv  Test-20-15-35-PR1q.csv  Test-20-15-35-PR2.csv  Test-20-15-35-PR2q.csv  Test-20-15-35-PoolSize.csv  (+4 more)
(+122 files in other folders)
